--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "Rushikesh Bhand",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
